[RELEASE]: First release -> Mai 2020

--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {},
-  "description": ""
+  "description": "Bot discord - Release V1 - Mai 2020"
 }
